// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SKUSelector /> should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="skuSelectorContainer"
  >
    <div
      class="skuSelectorSubcontainer flex flex-column mb7"
    >
      <div
        class="skuSelectorNameContainer ma1"
      >
        <span
          class="skuSelectorName c-muted-2 db t-small overflow-hidden mb3"
        >
          Color
        </span>
        <div
          class="inline-flex flex-wrap ml2"
        >
          <div
            class="skuSelectorItem relative di pointer flex items-center skuSelectorItemImage"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden hover-b--muted-2"
            >
              <div
                class="absolute absolute--fill"
              />
              <div
                class=""
              >
                <img
                  alt=""
                  src="sku-image-Black-url"
                />
              </div>
            </div>
          </div>
          <div
            class="skuSelectorItem relative di pointer flex items-center skuSelectorItemImage"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden hover-b--muted-2"
            >
              <div
                class="absolute absolute--fill"
              />
              <div
                class=""
              >
                <img
                  alt=""
                  src="sku-image-Blue-url"
                />
              </div>
            </div>
          </div>
          <div
            class="skuSelectorItem relative di pointer flex items-center skuSelectorItemImage"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden hover-b--muted-2"
            >
              <div
                class="absolute absolute--fill"
              />
              <div
                class=""
              >
                <img
                  alt=""
                  src="sku-image-Yellow-url"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SKUSelector /> should render only three main variations 1`] = `
<DocumentFragment>
  <div
    class="skuSelectorContainer"
  >
    <div
      class="skuSelectorSubcontainer flex flex-column mb7"
    >
      <div
        class="skuSelectorNameContainer ma1"
      >
        <span
          class="skuSelectorName c-muted-2 db t-small overflow-hidden mb3"
        >
          Color
        </span>
        <div
          class="inline-flex flex-wrap ml2"
        >
          <div
            class="skuSelectorItem relative di pointer flex items-center skuSelectorItemImage"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1 ba"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden"
            >
              <div
                class="absolute absolute--fill diagonalCross"
              />
              <div
                class=""
              >
                <span
                  class="c-on-base t-body"
                >
                  Gray
                </span>
              </div>
            </div>
          </div>
          <div
            class="skuSelectorItem relative di pointer flex items-center skuSelectorItemImage"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden hover-b--muted-2"
            >
              <div
                class="absolute absolute--fill diagonalCross"
              />
              <div
                class=""
              >
                <span
                  class="c-on-base t-body"
                >
                  Black
                </span>
              </div>
            </div>
          </div>
          <div
            class="skuSelectorItem relative di pointer flex items-center skuSelectorItemImage"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden hover-b--muted-2"
            >
              <div
                class="absolute absolute--fill diagonalCross"
              />
              <div
                class=""
              >
                <span
                  class="c-on-base t-body"
                >
                  Blue
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="skuSelectorSubcontainer flex flex-column mb7"
    >
      <div
        class="skuSelectorNameContainer ma1"
      >
        <span
          class="skuSelectorName c-muted-2 db t-small overflow-hidden mb3"
        >
          Size
        </span>
        <div
          class="inline-flex flex-wrap ml2"
        >
          <div
            class="skuSelectorItem relative di pointer flex items-center"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1 ba"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden"
            >
              <div
                class="absolute absolute--fill diagonalCross"
              />
              <div
                class="c-on-base center pl5 pr5 z-1"
              >
                <span
                  class="c-on-base t-body"
                >
                  1
                </span>
              </div>
            </div>
          </div>
          <div
            class="skuSelectorItem relative di pointer flex items-center"
            role="button"
            tabindex="0"
          >
            <div
              class="absolute frameAround b--action-primary br3 bw1"
            />
            <div
              class="w-100 h-100 ba br2 b b--muted-4 z-1 c-muted-5 flex items-center overflow-hidden hover-b--muted-2"
            >
              <div
                class="absolute absolute--fill diagonalCross"
              />
              <div
                class="c-on-base center pl5 pr5 z-1"
              >
                <span
                  class="c-on-base t-body"
                >
                  2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
